[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usersopenapi"
version = "0.0.1"
authors = [
  { name="Boris Shpilyuck", email="boris@emc.com" },
]
description = "Users Open API package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]
[tool.setuptools]
include-package-data = true
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
[tool.setuptools.package-data]
"*" = ["*.yaml"]

[project.urls]
"Homepage" = "https://github.com/shpboris/usersopenapi"
